# Differentiator

./: .gitignore  CMakeLists.txt  Calc.h  Calc_func.cpp  Makefile  README.md  Rec_Read.cpp  Rec_read.h  build.sh  colors.h  def_cmd.h  differ.cpp  differ.h  dump.cpp  dump.h  exemple.cpp  file.in  function.txt  outfile.txt  output_name  tree.cpp  tree.h
Dump/: dump.h
dump/: dump.cpp  dump.h
filename/: filename.cpp  filename.h
main/: exemple.cpp
rec_read/: Rec_read.h
sources/dump/: dump.cpp  dump.h
tree/: tree.cpp  tree.h
